# NFRepository

./: README.md  lab1_functions.cpp  lab1_functions.hpp  lab1_main.cpp  lab2_1_main.py
Algorithms and Data Structures/: lab1.cpp
Algorithms and Data Structures/lab10/: main.cpp
Algorithms and Data Structures/lab11/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/lab12/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/lab13/: main.cpp
Algorithms and Data Structures/lab14/: CMakeLists.txt
Algorithms and Data Structures/lab15/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/lab17/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/lab3/: main.cpp
Algorithms and Data Structures/lab4/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/lab5/: main.cpp
Algorithms and Data Structures/lab6/: CMakeLists.txt
Algorithms and Data Structures/lab8/: CMakeLists.txt  main.cpp
Another Circles/: CMakeLists.txt
Another Circles/inc/: globalConstsAndVars.hpp
Another Circles/src/: Game.cpp  Object.cpp
Basics_of_Programming/lab1_Time/: lab1_functions.cpp
Basics_of_Programming/lab2_First_Class_Cuboid/: CMakeLists.txt
Basics_of_Programming/lab4_First_SFML_Program/: CMakeLists.txt
Basics_of_Programming/lab5_Collision_of_Circles/: CMakeLists.txt
Class Matrix/: matrix_main.cpp
Discrete Mathematics/task2_1/: CMakeLists.txt
Discrete Mathematics/task2_5/: CMakeLists.txt  main.cpp
Discrete_Mathematics/lab7/: main.cpp
Discrete_Mathematics/lab8/: main.cpp
Discrete_Mathematics/task2_1/: main.cpp
Matrix/: .gitignore  CMakeLists.txt  matrix_main.cpp
OOP/: CMakeLists.txt
OOP/inc/: IDataRepository.hpp
OOP/lab1_Point2d_Vector2d/: main.cpp
OOP/lab2_Pseudographic_Text/: font_size_7.txt
OOP/lab3_Logging_System/: CMakeLists.txt
OOP/lab3_Logging_System/inc/: ConsoleLogHandler.hpp  FileLogHandler.hpp  ILogFilter.hpp  ILogHandler.hpp  Logger.hpp  RegExpLogFilter.hpp  SimpleLogFilter.hpp  SocketLogHandler.hpp  SyslogLogHandler.hpp
OOP/lab3_Logging_System/src/: ConsoleLogHandler.cpp  FileLogHandler.cpp  Logger.cpp  RegExpLogFilter.cpp  SimpleLogFilter.cpp  SocketLogHandler.cpp  SyslogLogHandler.cpp  main.cpp
OOP/lab4_Validation_and_Auto-update/: CMakeLists.txt  main.cpp
OOP/lab4_Validation_and_Auto-update/inc/: INotifyDataChanged.hpp  INotifyDataChanging.hpp  IPropertyChangedListener.hpp  IPropertyChangingListener.hpp
OOP/lab4_Validation_and_Auto-update/src/: main.cpp
OOP/lab5_Authorization_System/: CMakeLists.txt  auth.json
OOP/lab5_Authorization_System/inc/: AuthService.hpp  DataRepository.hpp  IAuthService.hpp  IDataRepository.hpp  User.hpp
OOP/lab5_Authorization_System/src/: AuthService.cpp  User.cpp  main.cpp
OOP/lab6_Virtual_Keyboard/: CMakeLists.txt  main.cpp
OOP/lab6_Virtual_Keyboard/inc/: Command.hpp  CommandFactory.hpp  Editor.hpp  KeyCommand.hpp  Keyboard.hpp  KeyboardStateSaver.hpp  MediaPlayerCommand.hpp  VolumeDownCommand.hpp  VolumeUpCommand.hpp
OOP/lab6_Virtual_Keyboard/src/: CommandFactory.cpp  Editor.cpp  KeyCommand.cpp  Keyboard.cpp  KeyboardStateSaver.cpp  MediaPlayerCommand.cpp  VolumeDownCommand.cpp  VolumeUpCommand.cpp
Python/: lab2_1_main.py  lab2_2_main.py  lab3_1-2_main_String_Coder_and_Decoder.py  lab3_3_main_Letter_Writing_of_Numbers.py  lab3_6_main_Abbreviation_Maker.py
Python/lab10_MatPlotLib/: main.py
Python/lab3/: lab3_1-2_main_String_Coder_and_Decoder.py  lab3_3_main_Letter_Writing_of_Numbers.py  (+3 more)
lab1/: CMakeLists.txt
lab2/: lab2_main.cpp
lab2_Pseudographic_Text/: CMakeLists.txt  font_size_5.txt  main.cpp
lab3/: lab3_main.cpp
lab3 Class String/: .gitignore  CMakeLists.txt
lab4/: CMakeLists.txt
lab4/src/: Game.cpp  main.cpp
(+124 files in other folders)
